--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.0"
   },
